✨ Add user followed notification
