# resources/js/types/notifications.ts
@@ -2,6 +2,7 @@ import {
     NotificationType,
     NotificationWrapper,
     PostLikedData,
+    UserFollowedData,
 } from '../../types/Api.gen';
 
 export const isPostLikedNotification = (notification: NotificationWrapper) => {
@@ -13,10 +14,24 @@ export const isPostLikedNotification = (notification: NotificationWrapper) => {
     );
 };
 
+export const isUserFollowedNotification = (
+    notification: NotificationWrapper,
+) => {
+    const data = notification.data;
+    return (
+        notification.data !== null &&
+        notification.type === NotificationType.UserFollowedNotification &&
+        (data as UserFollowedData).followerUserId !== undefined
+    );
+};
+
 export const getTypedNotificationData = (
     notification: NotificationWrapper,
-): PostLikedData | null => {
+): PostLikedData | UserFollowedData | null => {
     if (isPostLikedNotification(notification)) {
+        return notification.data;
+    }
+    if (isUserFollowedNotification(notification)) {
         return notification.data;
     }
     return null;
